--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="speaker-card2">
           <img
             src="./assets/Ellipse3.png"
-            alt=""
+            alt="Jane Smith, Product Manager"
             class="speaker-card__image2"
           />
           <div class="role_div">
@@ -45,13 +45,13 @@
             <p class="speaker-card__role">Product Manager</p>
             <p class="speaker-card__company">Tech Solutions</p>
             <div class="social">
-              <img src="./assets/simple-icons_drupal.png" alt="" />
-              <img src="./assets/Vector.png" alt="" />
-              <img src="./assets/Vector (1).png" alt="" />
+              <img src="./assets/simple-icons_drupal.png" alt="druple icon" />
+              <img src="./assets/Vector" alt="X app icon" />
+              <img src="./assets/Vector (1).png" alt="linkdIn icon " />
             </div>
           </div>
         </div>
-        <img class="speaker-card__image2_line" src="./assets/Line 1.png" alt="" />
+        <img class="speaker-card__image2_line" src="./assets/Line 1.png" alt="Section divider line" />
         <p>
           Monotonectally synergize business communities rather than
           client-centric convergence. Assertively unleash cross-platform best
@@ -60,7 +60,7 @@
           real-time markets through e-business strategic theme areas.
         </p>
         <div class="cross">
-          <img src="./assets/Vector (2).png" alt="" />
+          <img src="./assets/Vector (2).png" alt="Close icon" />
         </div>
       </div>
       <div class="slider-container">
@@ -70,7 +70,7 @@
         <button class="pro_btn">
           See the Program
           <div class="button_arrow">
-            <img src="./assets/Arrow.png" alt="" />
+            <img src="./assets/Arrow.png" alt="logo of shape curved arrow" />
           </div>
           <p class="tooltips">Click here to see the full program</p>
         </button>
@@ -84,7 +84,7 @@
   <script type="module" src="scripts/main.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- Add Slick JS -->
+
   <script
     type="text/javascript"
     src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
