next previous button updated

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p class="speaker-card__company">Tech Solutions</p>
             <div class="social">
               <img src="./assets/simple-icons_drupal.png" alt="druple icon" />
-              <img src="./assets/Vector" alt="X app icon" />
+              <img src="./assets/Vector.png" alt="X app icon" />
               <img src="./assets/Vector (1).png" alt="linkdIn icon " />
             </div>
           </div>
